Bug 728423 - Fix warnings in js/src related to JSObject::asString et al (r=luke)